# Rust-Template

./: .CLAUDE.md.bak  .README.md.bak  .env.example  .gherkin-lintrc  .gitattributes  .gitignore  .gitleaks.toml  .markdown-link-check.json  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  AC-TPL-QUESTIONS-LOGGED-IMPLEMENTATION.md  ADOPTION.md  CHANGELOG.md  CI_OPTIMIZATION_SUMMARY.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_QUALITY_FIXES.md  CONTRIBUTING.md  Cargo.toml  FRICTION_LOG.md  IMPLEMENTATION_SUMMARY.md  ISSUE_AC-PLT-021.md  ISSUE_AC-TPL-AGENT-HINTS-SCHEMA.md  ISSUE_AC-TPL-IDP-SNAPSHOT.md  Justfile  KERNEL_MAINTENANCE.md  MILESTONE_3.1_SUMMARY.md  PLATFORM_HEALTH_REPORT_2025-12-02.md  POLICY_EXAMPLES.md  QUICK_START_COVERAGE_AND_METRICS.md  README.md  REQUIRED_CHECKS.md  SECURITY.md  SERVICE_METADATA.yaml  TEMPLATE_API.md  TEMPLATE_OVERVIEW.md  (+44 more)
crates/ac-kernel/: CLAUDE.md  Cargo.toml  README.md
crates/ac-kernel/src/: coverage.rs  history.rs  json.rs  layout.rs  ledger.rs  lib.rs  model.rs
crates/acceptance/: CLAUDE.md  Cargo.toml  README.md
crates/acceptance/src/: coverage_writer.rs  lib.rs  world.rs
crates/acceptance/src/steps/: agent_hints.rs  common.rs  config_validation.rs  flow_idempotency.rs  governance_tasks.rs  governance_write.rs  mod.rs  myserv.rs  platform_security.rs  (+4 more)
crates/acceptance/tests/: acceptance.rs
crates/adapters-db-sqlx/: CLAUDE.md  Cargo.toml  README.md
crates/adapters-db-sqlx/migrations/: 20250101000000_init.sql
crates/adapters-db-sqlx/src/: lib.rs
crates/adapters-db-sqlx/tests/: integration.rs
crates/adapters-grpc/: CLAUDE.md  Cargo.toml  build.rs
crates/adapters-grpc/src/: lib.rs
crates/adapters-grpc/tests/: concurrency.rs  smoke.rs
crates/adapters-spec-fs/: CLAUDE.md  Cargo.toml
crates/adapters-spec-fs/src/: lib.rs  tasks_def.rs  tasks_state.rs
crates/adapters-spec-fs/tests/: integration_test.rs
crates/app-http/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY.md  README.md
crates/app-http/src/: agent.rs  config.rs  errors.rs  handlers.rs  lib.rs  main.rs  metrics.rs  platform.rs  router.rs  security.rs  shutdown.rs  state.rs  tasks.rs  test_helpers.rs  todos.rs
crates/app-http/tests/: async_io_regression.rs  compression.rs  cors_reproduction.rs  cors_security_test.rs  forks_api.rs  friction_api.rs  idp_api.rs  jwt_validation.rs  metrics_api.rs  platform_auth_headers.rs  questions_api.rs  security_cors_vary.rs  security_middleware.rs  task_status_api.rs  ui_accessibility.rs  ui_async_perf.rs  ui_auth_security.rs  ui_blocking_reproduction.rs  ui_contract_api.rs  ui_contract_dom.rs  ui_navigation.rs  ui_navigation_accessibility.rs  ui_rendering.rs  ui_ux_improvements.rs
crates/business-core/: CLAUDE.md  Cargo.toml  README.md
crates/business-core/src/: governance.rs  lib.rs  ports.rs  use_cases.rs
crates/doc-type-contract/: Cargo.toml
crates/doc-type-contract/src/: lib.rs
crates/gov-contracts/: CLAUDE.md  Cargo.toml  README.md
crates/gov-contracts/schemas/: config_schema.yaml  ui_contract.yaml
crates/gov-contracts/src/: lib.rs  platform.rs  schemas.rs  ui_contract.rs
crates/gov-http/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-core/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-core/src/: error.rs  extractors.rs  lib.rs  pagination.rs  repo.rs  state.rs
crates/gov-http-forks/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-forks/src/: lib.rs
crates/gov-http-friction/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-friction-types/: Cargo.toml
crates/gov-http-friction-types/src/: lib.rs
crates/gov-http-friction/src/: lib.rs
crates/gov-http-issues/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-issues/src/: conversion.rs  filtering.rs  handler.rs  lib.rs  loading.rs  models.rs
crates/gov-http-pagination/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-pagination/src/: lib.rs
crates/gov-http-questions/: CLAUDE.md  Cargo.toml  README.md
crates/gov-http-questions/src/: lib.rs
crates/gov-http-types/: CLAUDE.md  Cargo.toml
crates/gov-http-types/src/: friction.rs  lib.rs  question.rs
crates/gov-http/src/: error.rs  forks.rs  friction.rs  handlers.rs  issues.rs  lib.rs  questions.rs  state.rs
crates/gov-model/: CLAUDE.md  Cargo.toml  README.md
crates/gov-model/src/: context.rs  lib.rs  repository.rs
crates/gov-policy/: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
crates/gov-policy/policies/: ledger.rego  llm.rego  privacy.rego
crates/gov-policy/src/: lib.rs  policies.rs  runner.rs
crates/gov-receipts/: CLAUDE.md  Cargo.toml  README.md
crates/gov-receipts/src/: dossier.rs  economics.rs  gate.rs  lib.rs  meta.rs  quality.rs  telemetry.rs  timeline.rs
crates/gov-xtask-core/: CLAUDE.md  Cargo.toml  README.md
crates/gov-xtask-core/src/: env.rs  lib.rs  selftest.rs  validation.rs
crates/http-agents/: CLAUDE.md  Cargo.toml  README.md
crates/http-agents/src/: lib.rs
crates/http-auth-config/: Cargo.toml  README.md
crates/http-auth-config-loader/: Cargo.toml  README.md
crates/http-auth-config-loader/fuzz/: Cargo.toml
crates/http-auth-config-loader/src/: lib.rs
crates/http-auth-config-loader/tests/: loader_integration.rs
crates/http-auth-config-resolver/: Cargo.toml  README.md
crates/http-auth-config-resolver/fuzz/: Cargo.toml
crates/http-auth-config-resolver/src/: lib.rs
crates/http-auth-config-resolver/tests/: platform_auth_config_resolver_integration.rs
crates/http-auth-config/fuzz/: Cargo.toml
crates/http-auth-config/src/: lib.rs
crates/http-auth-config/tests/: from_sources.rs
crates/http-auth-guard/: Cargo.toml  README.md
crates/http-auth-guard/fuzz/: Cargo.toml
crates/http-auth-guard/src/: lib.rs
crates/http-auth-guard/tests/: authorization_integration.rs
crates/http-auth-mode/: CLAUDE.md  Cargo.toml  README.md
crates/http-auth-mode/fuzz/: Cargo.toml
crates/http-auth-mode/src/: lib.rs
crates/http-auth-mode/tests/: mode_integration.rs
rust_iac_xtask_core/: Cargo.toml
rust_iac_xtask_core/src/: commands.rs  config.rs  lib.rs
(+1207 files in other folders)
