# Development profile optimizations for faster builds

[profile.dev]
# Reduce debuginfo for faster linking
debug = 1

# Custom profile for faster dev builds with some optimization
[profile.dev-opt]
debug = 1
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

# Test profile optimizations
[profile.test]
# Minimal debug info for tests
debug = 1

[workspace]
exclude = ["examples/brownfield-demo"]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = {features = ["serde"], version = "0.4.42"}
# Testing
cucumber = {features = ["output-json", "output-junit"], version = "0.22.0"}
gherkin = "0.15.0"
http = "1.4.0"
http-body-util = "0.1.3"
md5 = "0.8.0"
# OTLP Telemetry
opentelemetry = "0.31.0"
opentelemetry-otlp = {features = ["tonic", "trace"], version = "0.31.0"}
opentelemetry_sdk = {features = ["rt-tokio"], version = "0.31.0"}
parking_lot = "0.12.3"
# Prometheus Metrics
prometheus = "0.14.0"
regex = "1.12.2"
serde = {features = ["derive"], version = "1.0.228"}
serde_json = "1.0.146"
serde_yaml = {package = "serde_yaml_ng", version = "0.10.0"}
# Utilities
shell-words = "1.1.1"
tempfile = "3.23.0"
testing = {path = "crates/testing"}
thiserror = "2.0.17"
# HTTP/Web
tokio = {features = ["macros", "rt-multi-thread"], version = "1.48.0"}
tonic = {features = [], version = "0.14.2"}
tower = {features = ["util"], version = "0.5.2"}
tracing = "0.1.44"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = {features = ["env-filter", "fmt"], version = "0.3.22"}
url = "2.5.7"
uuid = {features = ["serde", "v4"], version = "1.19.0"}

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = {level = "deny", priority = -1}
unused = {level = "deny", priority = -1}

[workspace.package]
authors = ["EffortlessSteven"]
documentation = "https://docs.rs/as-spec"
edition = "2024"
homepage = "https://github.com/effortlessmetrics/rust-as-spec"
license = "Apache-2.0 OR MIT"
publish = false # Workspace crates are private/internal
repository = "https://github.com/effortlessmetrics/rust-as-spec"
# This rust-version should be kept in sync with rust-toolchain.toml
rust-version = "1.89.0"
version = "3.3.14"
