# Development profile optimizations for faster builds

[profile.dev]
# Reduce debuginfo for faster linking
debug = 1

# Custom profile for faster dev builds with some optimization
[profile.dev-opt]
debug = 1
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

# Test profile optimizations
[profile.test]
# Minimal debug info for tests
debug = 1

[workspace]
exclude = ["examples/brownfield-demo"]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { features = ["serde"], version = "0.4.43" }
cucumber = "0.22.1"
gherkin = "0.15.0"
http = "1.4.0"
http-body-util = "0.1.3"
md5 = "0.8.0"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.5"
prometheus = "0.14.0"
# Property-based testing
proptest = "1.10.0"
regex = "1.12.3"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_yaml_ng = { package = "serde_yaml_ng", version = "0.10.0" }
shell-words = "1.1.1"
tempfile = "3.25.0"
# Internal workspace crates (Wave 1 publishable)
ac-kernel = { package = "rust-as-spec-ac-kernel", path = "crates/ac-kernel", version = "=3.3.15" }
business-core = { package = "rust-as-spec-business-core", path = "crates/business-core", version = "=3.3.15" }
gov-contracts = { package = "rust-as-spec-gov-contracts", path = "crates/gov-contracts", version = "=3.3.15" }
gov-model = { package = "rust-as-spec-gov-model", path = "crates/gov-model", version = "=3.3.15" }
gov-receipts = { package = "rust-as-spec-gov-receipts", path = "crates/gov-receipts", version = "=3.3.15" }
gov-xtask-core = { package = "rust-as-spec-gov-xtask-core", path = "crates/gov-xtask-core", version = "=3.3.15" }
model = { package = "rust-as-spec-model", path = "crates/model", version = "=3.3.15" }
spec-runtime = { package = "rust-as-spec-runtime", path = "crates/spec-runtime", version = "=3.3.15" }
telemetry = { package = "rust-as-spec-telemetry", path = "crates/telemetry", version = "=3.3.15" }
testing = { path = "crates/testing" }
thiserror = "2.0.18"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.49.0" }
tonic = { features = [], version = "0.14.5" }
tower = { features = ["util"], version = "0.5.3" }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { features = ["env-filter", "fmt"], version = "0.3.22" }
url = "2.5.8"
uuid = { features = ["serde", "v4"], version = "1.21.0" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

[workspace.package]
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
documentation = "https://github.com/EffortlessMetrics/Rust-Template"
edition = "2024"
homepage = "https://github.com/EffortlessMetrics/Rust-Template"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/EffortlessMetrics/Rust-Template"
rust-version = "1.92.0"
version = "3.3.15"
