# Development profile optimizations for faster builds

[profile.dev]
# Reduce debuginfo for faster linking
debug = 1

# Custom profile for faster dev builds with some optimization
[profile.dev-opt]
debug = 1
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

# Test profile optimizations
[profile.test]
# Minimal debug info for tests
debug = 1

[workspace]
exclude = ["examples/brownfield-demo"]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { features = ["serde"], version = "0.4.43" }
cucumber = "0.22.1"
gherkin = "0.15.0"
http = "1.4.0"
http-body-util = "0.1.3"
md5 = "0.8.0"
once_cell = "1.21.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry_sdk = "0.31.0"
parking_lot = "0.12.5"
prometheus = "0.14.0"
# Property-based testing
proptest = "1.10.0"
regex = "1.12.3"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
serde_yaml_ng = { package = "serde_yaml_ng", version = "0.10.0" }
shell-words = "1.1.1"
tempfile = "3.25.0"
# Internal workspace crates (Wave 1 publishable)
ac-kernel = { package = "rust-as-spec-ac-kernel", path = "crates/ac-kernel", version = "=3.3.15" }
business-core = { package = "rust-as-spec-business-core", path = "crates/business-core", version = "=3.3.15" }
gov-contracts = { package = "rust-as-spec-gov-contracts", path = "crates/gov-contracts", version = "=3.3.15" }
gov-model = { package = "rust-as-spec-gov-model", path = "crates/gov-model", version = "=3.3.15" }
gov-policy = { package = "rust-as-spec-gov-policy", path = "crates/gov-policy", version = "=3.3.15" }
gov-receipts = { package = "rust-as-spec-gov-receipts", path = "crates/gov-receipts", version = "=3.3.15" }
gov-xtask-core = { package = "rust-as-spec-gov-xtask-core", path = "crates/gov-xtask-core", version = "=3.3.15" }
model = { package = "rust-as-spec-model", path = "crates/model", version = "=3.3.15" }
spec-runtime = { package = "rust-as-spec-runtime", path = "crates/spec-runtime", version = "=3.3.15" }
telemetry = { package = "rust-as-spec-telemetry", path = "crates/telemetry", version = "=3.3.15" }
testing = { path = "crates/testing" }
thiserror = "2.0.18"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.49.0" }
tonic = { features = [], version = "0.14.5" }
tower = { features = ["util"], version = "0.5.3" }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { features = ["env-filter", "fmt"], version = "0.3.22" }
url = "2.5.8"
uuid = { features = ["serde", "v4"], version = "1.21.0" }

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
unexpected_cfgs = "warn"
const_item_interior_mutations = "deny"
function_casts_as_integer = "deny"

[workspace.lints.clippy]
# Panic-free production and tests
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic = "deny"
unreachable = "deny"
unwrap_used = "deny"
expect_used = "deny"
get_unwrap = "deny"
unwrap_in_result = "deny"
panic_in_result_fn = "deny"
string_slice = "deny"
indexing_slicing = "deny"
out_of_bounds_indexing = "deny"
unchecked_time_subtraction = "deny"

# AST / parser / UTF-8 / slice safety
char_indices_as_byte_indices = "deny"
sliced_string_as_bytes = "deny"
index_refutable_slice = "deny"

# Silent failure
let_underscore_future = "deny"
let_underscore_must_use = "deny"
let_underscore_lock = "deny"
unused_result_ok = "deny"
map_err_ignore = "deny"
assertions_on_result_states = "deny"
lines_filter_map_ok = "deny"

# Async / concurrency
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
await_holding_invalid_type = "deny"
future_not_send = "warn"
large_futures = "warn"
arc_with_non_send_sync = "deny"
rc_mutex = "deny"
mut_mutex_lock = "deny"
readonly_write_lock = "deny"

# Unsafe / memory
mem_forget = "deny"
forget_non_drop = "deny"
drop_non_drop = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
repr_packed_without_abi = "deny"

# Numeric correctness
float_cmp = "deny"
float_cmp_const = "deny"
float_equality_without_abs = "deny"
lossy_float_literal = "deny"
cast_sign_loss = "deny"
cast_possible_wrap = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
invalid_upcast_comparisons = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
manual_midpoint = "warn"
manual_is_multiple_of = "warn"
manual_div_ceil = "warn"
arithmetic_side_effects = "warn"

# File/process/path footguns
suspicious_open_options = "deny"
nonsensical_open_options = "deny"
ineffective_open_options = "deny"
path_buf_push_overwrite = "deny"
join_absolute_paths = "deny"
read_line_without_trim = "warn"
exit = "deny"

# API / trait correctness
iter_not_returning_iterator = "deny"
expl_impl_clone_on_copy = "deny"
infallible_try_from = "deny"
fallible_impl_from = "deny"
error_impl_error = "deny"
result_unit_err = "warn"
result_large_err = "warn"

# Good taste that pays rent
format_in_format_args = "deny"
to_string_in_format_args = "deny"
unused_format_specs = "deny"
unnecessary_debug_formatting = "warn"
uninlined_format_args = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_strip = "warn"
manual_split_once = "warn"
manual_is_variant_and = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
match_result_ok = "deny"
cloned_instead_of_copied = "warn"
iter_cloned_collect = "warn"
iter_overeager_cloned = "warn"
needless_collect = "warn"
redundant_closure = "warn"
redundant_closure_for_method_calls = "warn"
missing_panics_doc = "deny"
missing_errors_doc = "warn"

# Suppression governance
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
ignore_without_reason = "deny"
should_panic_without_expect = "deny"

[workspace.package]
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
documentation = "https://github.com/EffortlessMetrics/Rust-Template"
edition = "2024"
homepage = "https://github.com/EffortlessMetrics/Rust-Template"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/EffortlessMetrics/Rust-Template"
rust-version = "1.93"
version = "3.3.15"
