[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
# Re-export TestMapping from spec-runtime
spec-runtime.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lib]
name = "ac_kernel"

[package]
categories = ["development-tools"]
description = "Core AC governance logic for the Rust-as-Spec platform"
documentation = "https://docs.rs/rust-as-spec-ac-kernel"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["acceptance", "governance", "kernel", "testing"]
name = "rust-as-spec-ac-kernel"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
