[dependencies]
ac-kernel.workspace = true
adapters-spec-fs = {path = "../adapters-spec-fs"}
# Internal crates
app-http = {path = "../app-http"}
business-core.workspace = true
spec-runtime.workspace = true
telemetry.workspace = true
testing.workspace = true
anyhow.workspace = true
axum.workspace = true
cucumber = {features = ["output-junit"], workspace = true}
gherkin.workspace = true
http.workspace = true
http-body-util.workspace = true
jsonwebtoken = {features = ["rust_crypto"], version = "10.2.0"}
md5.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shell-words.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
uuid = {features = ["v4"], workspace = true}

[dev-dependencies]

[package]
name = "acceptance"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true

[[test]]
harness = false
name = "acceptance"
path = "tests/acceptance.rs"
