[package]
name = "adapters-db-sqlx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
model = { path = "../model" }
business-core = { path = "../business-core" }

[dev-dependencies]
testcontainers = "0.26.0"
tokio.workspace = true
async-trait.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true

[features]
integration-db = []
