[dependencies]
business-core.workspace = true
model.workspace = true
sqlx = {features = ["chrono", "migrate", "postgres", "runtime-tokio-rustls", "uuid"], version = "0.8.6"}
tokio = {features = ["time"], workspace = true}
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
testcontainers = "0.26.0"
uuid = {features = ["v4"], workspace = true}
async-trait.workspace = true
chrono.workspace = true
tokio.workspace = true

[features]
default = []
integration-db = []

[package]
categories = ["database", "database-implementations"]
description = "SQLx-based PostgreSQL database adapter with migration support"
keywords = ["database", "persistence", "postgresql", "sqlx"]
name = "adapters-db-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
