[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dependencies]
business-core = {path = "../business-core"}
model = {path = "../model"}
prost = "0.14.1"
prost-types = "0.14.1"
tokio = {features = ["sync", "time"], workspace = true}
tonic = {features = ["transport"], workspace = true}
tonic-prost = "0.14.2"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true

[features]
default = []
integration-grpc = []

[lib]
name = "adapters_grpc"
path = "src/lib.rs"

[package]
name = "adapters-grpc"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
