[dependencies]
business-core = {path = "../business-core"}
fs2 = "0.4.3"
serde = {workspace = true}
serde_yaml = {workspace = true}
spec-runtime = {path = "../spec-runtime"}
thiserror = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[package]
name = "adapters-spec-fs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
