[dependencies]
business-core.workspace = true
fs2 = "0.4.3"
serde = {workspace = true}
serde_yaml = {workspace = true}
spec-runtime.workspace = true
thiserror = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[package]
name = "adapters-spec-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
