[dependencies]
fs2 = "0.4.3"
serde = {workspace = true}
serde_yaml = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
business-core.workspace = true
spec-runtime.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

[package]
name = "adapters-spec-fs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
