[dependencies]
gov-model = {path = "../gov-model"}
model = {path = "../model"}
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[package]
categories = ["data-structures"]
description = "Core business logic and domain services for the application"
keywords = ["business", "core", "domain", "logic"]
name = "business-core"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
