[dependencies]
async-trait.workspace = true
chrono.workspace = true
gov-model.workspace = true
model.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lib]
name = "business_core"

[package]
categories = ["data-structures"]
description = "Core business logic and domain services for the application"
documentation = "https://docs.rs/rust-as-spec-business-core"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["business", "core", "domain", "logic"]
name = "rust-as-spec-business-core"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
