[dependencies]
anyhow = {workspace = true}
gov-model = {path = "../gov-model"}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}

[package]
description = "Governance contracts and schemas for Rust-as-Spec platform"
name = "gov-contracts"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
