[dependencies]
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
gov-model.workspace = true

[lib]
name = "gov_contracts"

[package]
categories = ["development-tools"]
description = "Governance contracts and schemas for Rust-as-Spec platform"
documentation = "https://docs.rs/rust-as-spec-gov-contracts"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]
keywords = ["contracts", "governance", "schemas", "spec"]
name = "rust-as-spec-gov-contracts"
publish = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
