[dependencies]
gov-http-core = {path = "../gov-http-core"}
http-errors = {features = ["axum"], path = "../http-errors"}
platform-contract = {path = "../platform-contract"}
axum.workspace = true
gov-model.workspace = true
http.workspace = true
serde.workspace = true
serde_yaml.workspace = true
spec-runtime.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[package]
name = "gov-http-forks"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
