[dependencies]
gov-http-core = { path = "../gov-http-core" }
gov-http-friction-types = { path = "../gov-http-friction-types" }
gov-model.workspace = true
http-errors = { path = "../http-errors", features = ["axum"] }
platform-contract = { path = "../platform-contract" }
spec-runtime.workspace = true
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true

[package]
name = "gov-http-friction"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
