[dependencies]
gov-http-core = { path = "../gov-http-core" }
gov-http-types = { path = "../gov-http-types" }
gov-model.workspace = true
http-errors = { path = "../http-errors", features = ["axum"] }
platform-contract = { path = "../platform-contract" }
spec-runtime.workspace = true
anyhow.workspace = true
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[package]
name = "gov-http-issues"
publish = false
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
